# swagger.yaml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  title: Example
+  title: Pet Shop Example API
   version: "0.1"
 consumes:
   - application/json
@@ -12,6 +12,10 @@ paths:
       tags: [Pets]
       operationId: app.get_pets
       summary: Get all pets
+      parameters:
+        - name: animal_type
+          in: query
+          type: string
       responses:
         200:
           description: Return pets
@@ -33,14 +37,13 @@ paths:
         200:
           description: Return pet
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/Pet'
-  /pets/{pet_id}:
+            $ref: '#/definitions/Pet'
+        404:
+          description: Pet does not exist
     put:
       tags: [Pets]
       operationId: app.put_pet
-      summary: Add a single item to the cart
+      summary: Create or update a pet
       parameters:
         - name: pet_id
           in: path
@@ -52,9 +55,9 @@ paths:
             $ref: '#/definitions/Pet'
       responses:
         200:
-          description: item updated
+          description: Pet updated
         201:
-          description: new item created
+          description: New pet created
     delete:
       tags: [Pets]
       operationId: app.delete_pet
@@ -66,9 +69,9 @@ paths:
           required: true
       responses:
         204:
-          description: item was deleted
+          description: Pet was deleted
         404:
-          description: item did not exist
+          description: Pet does not exist
 
 
 definitions:
@@ -76,6 +79,7 @@ definitions:
     type: object
     required:
       - name
+      - animal_type
     properties:
       id:
         type: string
@@ -84,15 +88,19 @@ definitions:
         readOnly: true
       name:
         type: string
-        description: Retailer ID
-        example: "foo"
-        readOnly: true
+        description: Pet's name
+        example: "Susie"
+      animal_type:
+        type: string
+        description: Kind of animal
+        example: "cat"
       tags:
         type: object
-        description: custom tags
+        description: Custom tags
       created:
         type: string
         format: date-time
+        description: Creation time
         example: "2015-07-07T15:49:51.230+02:00"
         readOnly: true
 
